# CIPSIpy

./: .gitignore  ANSWER.md  LICENSE  PERFORMANCE_PLAN.md  PROJECT_OUTLINE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.txt  TESTING_STRATEGY.md  VALIDATION.md  project_structure.txt  pyproject.toml  requirements.txt  setup.py  todo.md
.github/workflows/: ci.yml
assets/: generate_fci.py
assets/H2/sto-3g/: FCIDUMP  e_gs.txt  fci_matrix.txt  summary.txt
assets/H3+/3-21g/: FCIDUMP  (+3 more)
benchmarks/: run_whole_program_benchmark.py  test_cipsi_performance.py
benchmarks/results/: whole-program-20260402T084306Z-530416b78e4c-LittleTheorem.json  whole-program-20260402T084607Z-21367d0302df-LittleTheorem.json  whole-program-20260402T085051Z-eb748fb98619-LittleTheorem.json
examples/: README.md  demo_matrix_elements.py  h2_sto3g.fcidump  run.py  usage.py
examples/h2/: FCIDUMP  FCIDUMP.backup  README.md  fci_matrix.py  generate_fcidump.py  requirements.txt  run_cipsi_h2.py  run_fci.py  run_h2.py
scipy/: __init__.py
scipy_jax/: determinant.py  fcidump.py
src/: cipsi.py
src/cipsipy/: __init__.py  cipsi.py  determinants.py  diagonaliser.py  fcidump.py  hamiltonian.py
src/cipsypy/: __init__.py
src/scipy/: __init__.py  fcidump.py
tests/: __init__.py  test_cipsi.py  test_determinant.py  test_determinants.py  test_diagonaliser.py  test_fci_systems.py  test_fcidump.py  test_h2_fci.py  test_hamiltonian.py  test_pyscf_validation.py
tests/validation_data/: generate_pyscf_reference.py  h2_pyscf_enuc.npy  h2_pyscf_eri.npy  h2_pyscf_h1e.npy  h2_pyscf_hamiltonian.npy
(+12 files in other folders)
